RESOLVED FIXED241484
WebDriver: [Cocoa] Regression(r290743) Automated mouse movement does not result in JS mouse event being fired
https://bugs.webkit.org/show_bug.cgi?id=241484
Summary WebDriver: [Cocoa] Regression(r290743) Automated mouse movement does not resu...
Patrick Angle
Reported 2022-06-09 13:35:40 PDT
Attachments
Patrick Angle
Comment 1 2022-06-09 14:56:30 PDT
EWS
Comment 2 2022-06-10 07:52:07 PDT
Committed r295451 (251457@main): <https://commits.webkit.org/251457@main> Reviewed commits have been landed. Closing PR #1431 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.