Source/WebKit/UIProcess/API/mac/WKWebViewPrivateForTestingMac.h
@@ -52,7 +52,6 @@
 - (void)_setFooterBannerHeight:(int)height;
 - (NSSet<NSView *> *)_pdfHUDs;
 
-- (void)_simulateMouseMove:(NSEvent *)event;
 - (void)_retrieveAccessibilityTreeData:(void (^)(NSData *, NSError *))completionHandler;
 
 @property (nonatomic, readonly) BOOL _secureEventInputEnabledForTesting;
