Source/WebKit/UIProcess/API/mac/WKWebViewTestingMac.mm
@@ -121,11 +121,6 @@
     return nil;
 }
 
-- (void)_simulateMouseMove:(NSEvent *)event
-{
-    return _impl->mouseMoved(event);
-}
-
 - (void)_retrieveAccessibilityTreeData:(void (^)(NSData *, NSError *))completionHandler
 {
     _page->getAccessibilityTreeData([completionHandler = makeBlockPtr(completionHandler)] (API::Data* data) {
